--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
-    "react-dom": "^16.11.0",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^4.0.0",
     "react-transition-group": "^4.3.0"
   },
   "scripts": {
