--- a/backend/package.json
+++ b/backend/package.json
@@ -10,18 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.8",
+    "mongoose": "^5.10.14",
     "mongoose-unique-validator": "^2.0.3",
-    "multer": "^1.4.2",
-    "uuid": "^3.3.3"
+    "multer": "^1.4.2"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "nodemon": "^2.0.6"
   }
 }
