--- a/graphql-auth/tsconfig.json
+++ b/graphql-auth/tsconfig.json
@@ -1,9 +1,21 @@
 {
   "compilerOptions": {
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "target": "es6",
+    "noImplicitAny": true,
+    "moduleResolution": "node",
+    "sourceMap": true,
     "outDir": "dist",
-    "rootDir": "src",
-    "lib": ["esnext"],
-    "strict": true
+    "baseUrl": ".",
+    "paths": {
+        "*": [
+            "node_modules/*",
+            "src/types/*"
+        ]
+    },
+    "typeRoots": [
+      "./custom_typings",
+    ]
   },
-  "include": ["src/**/*"]
 }
