--- a/backend/package.json
+++ b/backend/package.json
@@ -1,34 +1,41 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "graphql-auth",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.ts"
+    "start": "node dist/server",
+    "clean": "rm -rf dist",
+    "build": "npm -s run clean && npm -s run generate && tsc",
+    "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
+    "generate:prisma": "prisma generate",
+    "generate:nexus": "ts-node --transpile-only src/schema",
+    "dev": "ts-node-dev --no-notify --respawn --transpileOnly src/server"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.9",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "^5.10.0",
-    "@types/mongoose-unique-validator": "^1.0.4",
-    "@types/node": "^14.14.7",
-    "axios": "^0.21.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "express-validator": "^6.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.14",
-    "mongoose-unique-validator": "^2.0.3",
-    "multer": "^1.4.2",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "@nexus/schema": "0.18.0",
+    "@prisma/client": "2.11.0",
+    "bcryptjs": "2.4.3",
+    "graphql-middleware": "4.0.1",
+    "graphql-shield": "7.4.1",
+    "graphql-yoga": "1.18.3",
+    "jsonwebtoken": "8.5.1",
+    "nexus-plugin-prisma": "0.24.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "@prisma/cli": "2.11.0",
+    "@types/bcryptjs": "2.4.2",
+    "@types/jsonwebtoken": "8.5.0",
+    "@types/node": "12.19.4",
+    "@types/ws": "7.4.0",
+    "ts-node": "9.0.0",
+    "ts-node-dev": "1.0.0-pre.50",
+    "typescript": "4.1.2"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false,
+    "trailingComma": "all"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
