--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.2.7",
+    "@testing-library/jest-dom": "^5.11.6",
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
@@ -41,6 +42,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^11.2.2",
+    "@types/jest": "^26.0.15",
     "source-map-loader": "^1.1.2",
     "typescript": "^4.0.5"
   }
