--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,7 +20,6 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
-    // "noUnusedParameters": true,
     "outDir": "./dist",
     "removeComments": true,
     "resolveJsonModule": true,
@@ -29,7 +28,7 @@
     "strict": true,
     "strictFunctionTypes": true,
     "strictNullChecks": true,
-    "target": "es6",
+    "target": "es6"
   },
   "exclude": [
     "node_modules"
