--- a/backend/package.json
+++ b/backend/package.json
@@ -18,17 +18,17 @@
     "graphql-shield": "7.4.1",
     "graphql-yoga": "1.18.3",
     "jsonwebtoken": "8.5.1",
-    "nexus-plugin-prisma": "0.24.0"
+    "nexus-plugin-prisma": "0.24.0",
+    "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0-pre.50",
+    "typescript": "^4.1.2"
   },
   "devDependencies": {
     "@prisma/cli": "2.11.0",
     "@types/bcryptjs": "2.4.2",
     "@types/jsonwebtoken": "8.5.0",
     "@types/node": "12.19.4",
-    "@types/ws": "7.4.0",
-    "ts-node": "9.0.0",
-    "ts-node-dev": "1.0.0-pre.50",
-    "typescript": "4.1.2"
+    "@types/ws": "7.4.0"
   },
   "prettier": {
     "singleQuote": true,
